--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,63 @@ a {
   color: white;
 }
 
+.modal {
+  position: absolute;
+  top: 80px;
+  right: 5px;
+
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+
+  width: 300px;
+  min-height: 100px;
+  padding: 10px;
+
+  border-radius: 10px;
+  background-color: black;
+  -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+  gap: 10px;
+}
+.modal--active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.modal .movie {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+      flex-direction: row;
+
+  width: 100%;
+  height: 150px;
+
+  gap: 5px;
+}
+.modal .movie:hover {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+.modal .movie__poster {
+  width: 50px;
+  height: 50px;
+
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.modal .movie__favourite {
+  color: red;
+}
+
 .container,
 .footer__container,
 .movies__container,
@@ -155,14 +212,29 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
 
+  width: 80%;
   padding-bottom: 20px;
 
   gap: 10px;
 }
 
-.movie__card {
-  max-width: 220px;
-  max-height: 420px;
+.movie {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+
+  width: 220px;
+  height: 380px;
   padding: 1rem;
 
   -webkit-transition: -webkit-transform 0.3s ease;
@@ -176,18 +248,38 @@ a {
   background-color: #1c1c1c;
   -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-.movie__card:hover {
-  -webkit-transform: translateY(-5px);
-  -webkit-transform: scale(1.2);
-      -ms-transform: translateY(-5px);
-      -ms-transform: scale(1.2);
-          transform: translateY(-5px);
-          transform: scale(1.2);
-}
 
+  gap: 10px;
+}
+.movie:hover {
+  -webkit-transform: translateY(-5px);
+  -webkit-transform: scale(1.1);
+      -ms-transform: translateY(-5px);
+      -ms-transform: scale(1.1);
+          transform: translateY(-5px);
+          transform: scale(1.1);
+}
 .movie__poster {
   width: 100%;
+  height: 200px;
+
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.movie__favourite {
+  margin-top: 10px;
+
+  cursor: pointer;
+
+  font-size: 20px;
+}
+.movie__favourite:hover {
+  color: red;
+}
+.movie__trash {
+  display: none !important;
+
+  cursor: pointer;
 }
 
 .footer {
