--- a/src/scss/movies/_movie-card.scss
+++ b/src/scss/movies/_movie-card.scss
@@ -1,19 +1,38 @@
-.movie__card {
+.movie {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     background-color: #1c1c1c;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     padding: 1rem;
-    max-width: 220px;
-    max-height: 420px;
+    width: 220px;
+    height: 380px;
     text-align: center;
     color: #fff;
     transition: transform 0.3s ease;
     &:hover {
         transform: translateY(-5px);
-        transform: scale(1.2);
+        transform: scale(1.1);
+    }
+    &__poster{
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+    &__favourite{
+        margin-top: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        &:hover{
+            color: red;
+        }
+    }
+    &__trash{
+        display: none !important;
+        cursor: pointer;
     }
 }
 
-.movie__poster{
-    width: 100%;
-}
