--- a/src/scss/movies/_movies.scss
+++ b/src/scss/movies/_movies.scss
@@ -3,6 +3,7 @@
 .movies{
     &__container{
         @extend .container;
+        width: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
