--- a/src/scss/modal/_modal.scss
+++ b/src/scss/modal/_modal.scss
@@ -9,7 +9,7 @@
     min-height: 100px;
     border-radius: 10px;
     padding: 10px;
-    background-color: darken(#1c1c1c, 50%);
+    background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     &--active{
         display: flex;
