--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ a {
   padding: 10px;
 
   border-radius: 10px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.8);
   -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 
@@ -53,6 +53,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
@@ -91,6 +92,7 @@ a {
 
 .header {
   height: 80px;
+  padding-top: 20px;
 }
 .header__container {
   display: -webkit-box;
@@ -300,4 +302,12 @@ a {
   justify-content: center;
 
   height: 100%;
+}
+@media (max-width: 465px) {
+  .modal {
+    width: 250px;
+  }
+  .header__logo {
+    font-size: 1.75rem;
+  }
 }
