--- a/src/scss/modal/_modal.scss
+++ b/src/scss/modal/_modal.scss
@@ -9,8 +9,11 @@
     min-height: 100px;
     border-radius: 10px;
     padding: 10px;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    @media (max-width: 465px) {
+        width: 250px;
+    }
     &--active{
         display: flex;
     }
@@ -19,6 +22,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
+        overflow: hidden;
         gap: 5px;
         &:hover{
             transform: scale(1);
